Fixed the project reference to the library from the executable.

--- a/SortingRoutines/SortingRoutines.csproj
+++ b/SortingRoutines/SortingRoutines.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\sorting-routines-csharp\SortingRoutines.Library\SortingRoutines.Library.csproj" />
+    <ProjectReference Include="..\SortingRoutines.Library\SortingRoutines.Library.csproj" />
   </ItemGroup>
 
 </Project>
